# vizzu-lib

./: .clang-format  .eslintrc.cjs  .eslintrc.json  .gitignore  .puppeteerrc.cjs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  NOTICE  PROJECTS.md  Presentation.pptx  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  set_version.js
.VSCodeCounter/2022-02-19_19-00-37/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2022-02-19_19-04-49/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-02-19_19-09-38/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2022-02-19_19-12-34/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2022-02-19_19-17-52/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.github/workflows/: cd.yml  ci.yml  cicd.yml  doc.yml  docker-vizzu-dev-desktop.yml  docker-vizzu-dev-wasm.yml  init.yml  release.yml  slack.yml
ci/cloudbuild/: all-docker-build.yaml  all-prebuild_docker-build.yaml  desktop-docker-build.yaml  desktop-prebuild_docker-build.yaml  vizzu-devenv-docker.yaml  vizzu-devenv-prebuild-docker.yaml  wasm-docker-build.yaml  wasm-prebuild_docker-build.yaml
ci/docker/: vizzu-devenv  vizzu-devenv-all  vizzu-devenv-all-cloudbuild  vizzu-devenv-dekstop-cloudbuild  vizzu-devenv-desktop-cloudbuild  vizzu-devenv-wasm  vizzu-devenv-wasm-cloudbuild  vizzu-devenv-wasm-desktop  vizzu-devenv-wasm-desktop-test  vizzu-devenv-wasm-desktop-test-cloudbuild  vizzu-jsunittest-cloudbuild  vizzu-test-cloudbuild
docs/: .gitignore  build.md  index.html  installation.md  reference.md
docs/examples/: index.md
docs/generator/: example-list.js  example.in.html  example.js  examples.js  gendoc.js  genroot.js  gentutorial.js  index.in.html  index.root.in.html  package.json  tutorial.js
docs/reference/: README.md  index.md
docs/script/: document-view.js  document.js  documentation.js  documentid.js  dom-helper.js  example-style.js  jsfiddle.js  main.js  navigator.js  registry.js  sample-data.js  section-view.js  section.js  sidebar.js  snippet.js  subsection-view.js  subsection.js  vizzu-view.js
docs/snippets/: index.html  tutorial_data.js  tutorial_new_1.js  tutorial_new_10.js  tutorial_new_11.js  tutorial_new_12.js  tutorial_new_13.js  tutorial_new_14.js  tutorial_new_2.js  tutorial_new_3.js  tutorial_new_4.js  tutorial_new_5.js  tutorial_new_6.js  tutorial_new_7.js  tutorial_new_8.js  tutorial_new_9.js
docs/style/: example.css  examples.css  highlight.css  layout.css  main.css  menu.css  root.css  tutorial.css
docs/tutorial/: .eslintrc.cjs  13-layout.md  18-presets.md  4-channels-legend.md  6-sorting.md  aggregating_data.js  aggregating_data.md  align_range.js  align_range.md  animation_control_keyframes.js  animation_control_keyframes.md  animation_options.js  animation_options.md  axes_title_tooltip.js  axes_title_tooltip.md  changing_dimensions.js  changing_dimensions.md  channels_legend.js  channels_legend.md  chart_layout.js  chart_layout.md  chart_presets.js  chart_presets.md  color_palette_fonts.js  color_palette_fonts.md  data.md  events.js  events.md  filter_add_new_records.js  filter_add_new_records.md  geometry.js  geometry.md  group_stack.js  group_stack.md  index.md  initialization.md  orientation_split_polar.js  orientation_split_polar.md  setup.md  setup_config.md  (+12 more)
example/: example.js  index.html
example/data/: generator.js
project/: build.md  release.md
project/cmake/: CMakeLists.txt  common.txt  emcc.txt  guicommon.txt  includes.txt  link.txt  tests.txt  todochk.txt  version.txt
project/cmake/dtest/: CMakeLists.txt
project/cmake/lib/: CMakeLists.txt
project/cmake/qtest/: CMakeLists.txt
project/cmake/test/: CMakeLists.txt
project/cmake/weblib/: CMakeLists.txt  emcc.txt  gen.txt
project/js/: .eslintrc.cjs  .eslintrc.js  .prettierignore  .prettierrc  package.json  rollup.config.cjs  rollup.config.js
project/npm/: package.json  replace_urls.js
src/: .clang-tidy  .eslintrc.cjs  package.json
src/dataframe/: interface.cpp  interface.h
src/dataset/: aggregators.cpp  aggregators.h  baseseries.cpp  baseseries.h  dataset.cpp  dataset.h  generators.cpp  generators.h  interface.h  interfaces.h  iterators.h  iterators.hpp  linkedseries.cpp  linkedseries.h  mutableseries.cpp  mutableseries.h  originalseries.cpp  originalseries.h  range.cpp  range.h  recordaggregator.cpp  recordaggregator.h  series.cpp  series.h  table.cpp  table.h  tablecell.cpp  tablecell.h  tablecol.cpp  tablecol.h  tablefilters.cpp  tablefilters.h  tablerow.cpp  tablerow.h  tablesorters.cpp  tablesorters.h  types.h  value.cpp  value.h  valueiterator.cpp  (+1 more)
test/: .eslintrc.cjs  test.md
test/dts/: vizzu.d.ts
test/e2e/: accept-changes.cjs  man.cjs  (+1 more)
tools/ci/: .pylintrc  markdown_format.py  purge.cjs  pyproject.toml  rollup.config.cjs  sizeCheck.cjs  size_check.py  std_check.py  version.cjs
tools/ci/docker/: vizzu-dev-desktop  vizzu-dev-wasm
tools/ci/gcp/cloudbucket/CORS/: cors.json  cors.md
tools/ci/gcp/cloudbuild/: cloudbuild-docs.yaml  cloudbuild.yaml
tools/ci/gcp/cloudfunctions/getVizzuList/: index.js  package.json
tools/ci/run/: docs-build.sh  docs-deploy.sh  docs-gen-thumbnail-gsutil.sh  docs-gen-thumbnail.sh  docs-thumbnails.sh  format-black-py.sh  format-mdformat-py.sh  init-py.sh  lint-pylint-py.sh  lock-py.sh  pkg-build-desktop-clangformat.sh  pkg-build-desktop-clangtidy.sh  pkg-build-desktop.sh  pkg-build-js.sh  pkg-build-jsonly.sh  pkg-build-ts.sh  pkg-build-wasm-wocpp-gsutil.sh  pkg-build-wasm-wocpp.sh  pkg-build-wasm.sh  pkg-build.sh  pkg-init-js.sh  pkg-init.sh  pkg-purge-js.sh  pkg-rollup-js.sh  pkg-rollup-jsonly.sh  pkg-set-version-js.sh  test-gsutil.sh  type-mypy-py.sh
tools/ci/type/: gen-canvas-h.cjs  gen-canvas-js.cjs  gen-canvas-ts.cjs  gen-dts.cjs  gen-presets.cjs  gen-simple.cjs
tools/ci/type/test-dts-compile/: app.ts
(+5952 files in other folders)
