[project]
name = "vizzu-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Vizzu Inc.", email = "hello@vizzu.io"},
]
dependencies = []
requires-python = ">=3.13"
license = {text = "Apache-2.0"}

[tool.pdm.dev-dependencies]
codequality = [
    "black",
    "pylint",
    "mypy",
]
docs = [
    "setuptools",
    "mdformat",
    "mdformat-beautysh",
    "mdformat-black",
    "mdformat-configurable-black",
    "mdformat-config",
    "mdformat-web",
    "mdformat-mkdocs",
    "mdformat-gfm",
    "mdformat-tables",
    "mdformat-footnote",
    "mdformat-frontmatter",
    "mdx_truly_sane_lists",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-literate-nav",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-placeholder-plugin>=0.4.1",
    "mkdocs-include-markdown-plugin",
    "mkdocs-exclude",
    "mike",
    "pyyaml",
    "types-pyyaml",
    "markdown",
    "types-Markdown",
    "Pillow",
    "types-Pillow",
    "setuptools<72.0.0",
]

[tool.setuptools]
py-modules = []
